TAP5-2699: Upgrading build to latest Gradle (7.4)
TAP5-2699: first pass at upgrading build to latest Gradle (7.3.3)

TAP5-2699: fixing tapestry-test Gradle configuration

so projects depending on it can run tests with Selenium

TAP5-2699: trying to fix JaCoCo

TAP5-2699: trying to fix JaCoCo, 2nd attempt

TAP5-2699: trying to fix JaCoCo, 3rd attempt

TAP5-2699: picking up Gradle 7.4

TAP5-2699: fixing bad JavaVersion enum value for Java 9 (x2)