@@ -12,27 +12,27 @@ project.ext {
 clean.delete mainGeneratedDir, testGeneratedDir
 
 dependencies {
-    compile project(':tapestry-ioc')
-    compile project(':tapestry-json')
-    compile project(':beanmodel')
-    compile project(':tapestry-http')
+    api project(':tapestry-ioc')
+    api project(':tapestry-json')
+    api project(':beanmodel')
+    api project(':tapestry-http')
     
-    compile 'jakarta.annotation:jakarta.annotation-api:1.3.4'
-    compile 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
-    compile 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
-    compile 'com.sun.xml.ws:jaxws-rt:2.3.2'
-    compile 'javax.xml.ws:jaxws-api:2.3.1'
+    implementation 'jakarta.annotation:jakarta.annotation-api:1.3.4'
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
+    implementation 'com.sun.xml.ws:jaxws-rt:2.3.2'
+    implementation 'javax.xml.ws:jaxws-api:2.3.1'
 
     provided project(":tapestry-test")
     provided project(":tapestry-test-constants")
 
     provided "javax.servlet:javax.servlet-api:${versions.servletapi}"
 
-    compile "commons-codec:commons-codec:1.10"
+    implementation "commons-codec:commons-codec:1.10"
 
-    testRuntime "org.hsqldb:hsqldb:1.8.0.10"
+    testRuntimeOnly "org.hsqldb:hsqldb:1.8.0.10"
 
-    testRuntime 'com.google.inject:guice:3.0'
+    testRuntimeOnly 'com.google.inject:guice:3.0'
 }
 
 task preprocessCoffeeScript(type: PreprocessCoffeeScript) {
@@ -69,6 +69,14 @@ compileTestGroovy.dependsOn compileTestJava
 jar {
     from("src/main/filtered-resources") {
         filter(ReplaceTokens, tokens: [version: project.version])
+    }
+}
+
+// Needed to have XMLTokenStreamTests.testStreamEncoding() passing on Java 17
+test {
+    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_1_9)) {
+        println "Java 9+ JVM arg: --add-opens=java.base/java.nio.charset=ALL-UNNAMED"
+        jvmArgs("--add-opens=java.base/java.nio.charset=ALL-UNNAMED");
     }
 }
 
